--- a/site/guide/model-documentation/working-with-model-documentation.qmd
+++ b/site/guide/model-documentation/working-with-model-documentation.qmd
@@ -84,6 +84,8 @@ This section describes how to work with model documentation in the {{< var valid
 
 ### Add or edit documentation
 
+Modify the contents of the **Latest** version of your document:[^4]
+
 1. From the **Document Overview**, jump to any section of the model documentation by clicking on the heading you would like to view.
 
 5. In any section of the documentation, click to add or edit content. 
@@ -122,3 +124,5 @@ Wrap up your model documentation, collaborate with other stakeholders, and submi
 [^2]: [{{< var validmind.developer >}}](/developer/validmind-library.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^4]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
