--- a/site/guide/model-validation/preparing-validation-reports.qmd
+++ b/site/guide/model-validation/preparing-validation-reports.qmd
@@ -86,12 +86,14 @@ The **Validation Report Overview** shows a section-by-section outline of your mo
 
 ### Add or edit validation reports
 
+Modify the contents of the **Latest** version of your validation report:[^9]
+
 1. From the **Validation Report Overview**, jump to any section of the validation report by clicking on the heading you would like to view.
 
 2. Add **Risk Assessment Notes**, as well as assess compliance for each section of your validation report:
 
-    - Validation guidelines are displayed under the header of each section of your report to help ensure that you are compliant with your organization's requirements.[^9]
-    - Whenever you make a change, a log of the action is recorded under **{{< fa wifi >}} Model Activity**.[^10]
+    - Validation guidelines are displayed under the header of each section of your report to help ensure that you are compliant with your organization's requirements.[^10]
+    - Whenever you make a change, a log of the action is recorded under **{{< fa wifi >}} Model Activity**.[^11]
 
 3. For any **Risk Assessment Notes**, save your edits to retain your changes:
 
@@ -99,7 +101,7 @@ The **Validation Report Overview** shows a section-by-section outline of your mo
    - Select **Save current revision** and enter a name.
    - Click {{< fa check >}} to save the revision.
 
-   You can also suggest changes and leave comments.[^11]
+   You can also suggest changes and leave comments.[^12]
 
    ::: {.callout}
    Compliance assessments and linking evidence and artifacts are both saved automatically after selection.
@@ -140,9 +142,11 @@ Collaborate with other stakeholders and submit your work for approval:
 
 [^8]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
-[^9]: [Manage validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd)
+[^9]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
 
-[^10]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
+[^10]: [Manage validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd)
 
-[^11]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
+[^11]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
+
+[^12]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd)
 
