--- a/site/guide/model-documentation/assign-documentation-section-statuses.qmd
+++ b/site/guide/model-documentation/assign-documentation-section-statuses.qmd
@@ -33,7 +33,7 @@ Assign a completion status to individual sections of your model documentation th
     - [**In Progress**]{.bubble}
     - [**Done**]{.bubble}
 
-The documentation completion status summary will then be updated on your Document Overview[^6] page.
+The documentation completion status summary will then be updated on your Document Overview page.
 
 
 <!-- FOOTNOTES -->
@@ -46,6 +46,4 @@ The documentation completion status summary will then be updated on your Documen
 
 [^4]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
 
-[^5]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
-
-[^6]: [Working with model documentation](working-with-model-documentation.qmd#document-overview)
+[^5]: [Working with model documentation](working-with-model-documentation.qmd#document-overview)
