--- a/site/guide/model-documentation/view-documentation-guidelines.qmd
+++ b/site/guide/model-documentation/view-documentation-guidelines.qmd
@@ -47,4 +47,4 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has these permiss
 
 [^4]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
 
-[^5]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^5]: [Working with model documentation](working-with-model-documentation.qmd#document-overview)
