--- a/site/guide/model-validation/add-manage-artifacts.qmd
+++ b/site/guide/model-validation/add-manage-artifacts.qmd
@@ -123,9 +123,7 @@ If you logged an artifact in error or otherwise no longer need to track that art
 
 [^7]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
 
-<!-- HERE -->
-
-[^8]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^8]: [Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd#validation-report-overview)
 
 [^9]: [Manage artifact types](manage-artifact-types.qmd)
 
