--- a/site/guide/model-validation/assess-compliance.qmd
+++ b/site/guide/model-validation/assess-compliance.qmd
@@ -77,4 +77,4 @@ To link evidence logged by developers^[[{{< var validmind.developer >}}](/develo
 
 [^5]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
 
-[^6]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^6]: [Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd#validation-report-overview)
