--- a/site/guide/model-validation/_add-artifacts-on-documentation.qmd
+++ b/site/guide/model-validation/_add-artifacts-on-documentation.qmd
@@ -5,7 +5,7 @@
 
 1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.^[[Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)]
 
-1. Click on a Documentation type file.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
+1. Click on a Documentation type file.^[[Working with model documentation](working-with-model-documentation.qmd#document-overview)]
 
     <!-- Either log an artifact on this overview page, or via a specific documentation section. Both methods will allow you to associate an artifact with a documentation section.  -->
 
