--- a/site/guide/model-validation/_provide-compliance-assessments.qmd
+++ b/site/guide/model-validation/_provide-compliance-assessments.qmd
@@ -5,7 +5,7 @@
 
 1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.^[[Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)]
 
-1. Click on a Validation Report type file.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
+1. Click on a Validation Report type file.^[[Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd#validation-report-overview)]
 
    Expand any subsection of the validation report you would like to work with.
 
