docs: Work with document versions (#1066)
* Setup: Work with document versions

* Draft: Work with document versions

* Save point

* Save point

* Footnote cleanup

* Footnote cleanup pt2

* Edit

* Proofreading

* More proofreading

* Fixing broken link

--- a/site/guide/model-documentation/assign-documentation-section-statuses.qmd
+++ b/site/guide/model-documentation/assign-documentation-section-statuses.qmd
@@ -23,7 +23,9 @@ Assign a completion status to individual sections of your model documentation th
 
 2. Select a model or find your model by applying a filter or searching for it.[^3]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Documentation type file.[^4]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.[^4]
+
+4. Click on a Documentation type file.[^5]
 
    Jump to any section of the model documentation by selecting the relevant section you would like to view.
 
@@ -31,7 +33,7 @@ Assign a completion status to individual sections of your model documentation th
     - [**In Progress**]{.bubble}
     - [**Done**]{.bubble}
 
-The documentation completion status summary will then be updated on your Document Overview[^5] page.
+The documentation completion status summary will then be updated on your Document Overview page.
 
 
 <!-- FOOTNOTES -->
@@ -42,6 +44,6 @@ The documentation completion status summary will then be updated on your Documen
 
 [^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^4]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^4]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
 
 [^5]: [Working with model documentation](working-with-model-documentation.qmd#document-overview)
