--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -26,15 +26,15 @@ These stock documents cannot be deleted, only edited.
 
 2. Select a model or find your model by applying a filter or searching for it.[^5]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents**.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.[^6]
 
 4. Click **{{< fa plus >}} Create Document**.
 
 5. Enter in the document details: 
 
-    - **[document title]{.smallcaps}** — Title of your document.[^6]
-    - **[document type]{.smallcaps}**[^7] — The type of your document.
-    - **[document source]{.smallcaps}** — Upload a PDF file or select from an existing document template.[^8]
+    - **[document title]{.smallcaps}** — Title of your document.[^7]
+    - **[document type]{.smallcaps}**[^8] — The type of your document.
+    - **[document source]{.smallcaps}** — Upload a PDF file or select from an existing document template.[^9]
 
 6. Click **Create Document** to add the document to your model.
 
@@ -42,13 +42,15 @@ These stock documents cannot be deleted, only edited.
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^9]
+2. Select a model or find your model by applying a filter or searching for it.[^10]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a document file.
+3.  In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.[^11]
 
-4. Jump to any section of the document by clicking on a heading you would like to view.
+4. Click on the document file you'd like to edit.
 
-4. In any section of the document, click to add or edit content.[^10]
+5. Jump to any section of the document by clicking on a heading you would like to view.
+
+6. In any section of the document, click to add or edit content.[^12]
 
     Use the text editor functions to edit the content of the section.
 
@@ -60,9 +62,9 @@ Deletion of documents on models is permanent and cannot be undone.
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^11]
+2. Select a model or find your model by applying a filter or searching for it.[^13]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents**.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.[^14]
 
 4. Hover over the document you want to delete.
 
@@ -91,17 +93,24 @@ Learn more about how to work with the default document types within the {{< var 
 
 [^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^6]: A unique document ID will automatically be created from the title.
+[^6]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
 
-[^7]: [Manage document types](manage-document-types.qmd)
+[^7]: A unique document ID will automatically be created from the title.
 
-[^8]: [Customize document templates](customize-document-templates.qmd)
+[^8]: [Manage document types](manage-document-types.qmd)
 
-[^9]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^9]: [Customize document templates](customize-document-templates.qmd)
 
-[^10]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd)
+[^10]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^11]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^11]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
+
+[^12]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd)
+
+[^13]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^14]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
+
 
 
 
