--- a/site/guide/model-documentation/working-with-model-documentation.qmd
+++ b/site/guide/model-documentation/working-with-model-documentation.qmd
@@ -4,6 +4,7 @@ date: last-modified
 listing:
   - id: draft-documentation
     type: grid
+    grid-columns: 2
     max-description-length: 250
     sort: false
     fields: [title, description]
@@ -11,6 +12,7 @@ listing:
       - view-documentation-guidelines.qmd
       - work-with-content-blocks.qmd
       - work-with-test-results.qmd
+      - work-with-document-versions.qmd
   - id: complete-documentation
     type: grid
     max-description-length: 250
@@ -82,6 +84,8 @@ This section describes how to work with model documentation in the {{< var valid
 
 ### Add or edit documentation
 
+Modify the contents of the **Latest** version of your document:[^4]
+
 1. From the **Document Overview**, jump to any section of the model documentation by clicking on the heading you would like to view.
 
 5. In any section of the documentation, click to add or edit content. 
@@ -120,3 +124,5 @@ Wrap up your model documentation, collaborate with other stakeholders, and submi
 [^2]: [{{< var validmind.developer >}}](/developer/validmind-library.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^4]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
