--- a/site/guide/model-validation/_add-artifacts-on-documentation.qmd
+++ b/site/guide/model-validation/_add-artifacts-on-documentation.qmd
@@ -3,7 +3,9 @@
 
 1. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
 
-1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Documentation type file.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
+1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.^[[Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)]
+
+1. Click on a Documentation type file.^[[Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd#document-overview)]
 
     <!-- Either log an artifact on this overview page, or via a specific documentation section. Both methods will allow you to associate an artifact with a documentation section.  -->
 
