--- a/site/guide/model-validation/_link-artifacts-to-reports.qmd
+++ b/site/guide/model-validation/_link-artifacts-to-reports.qmd
@@ -3,7 +3,9 @@
 
 1. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
 
-1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file under Documents.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
+1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.^[[Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)]
+
+1. Click on a Validation Report type file.^[[Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd#validation-report-overview)]
 
 1. Expand any subsection of the validation report you would like to work with.
 
