--- a/site/guide/templates/manage-document-templates.qmd
+++ b/site/guide/templates/manage-document-templates.qmd
@@ -40,12 +40,12 @@ Switch a document to a completely different template, or apply another version o
 
 2. Select a model or find your model by applying a filter or searching for it.[^3]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents**.
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.[^4]
 
 4. Select the document you want to view the template for:
 
    - Click **{{< fa magnifying-glass >}} Search** to search for documents by keywords in the document title.
-   - Click **{{< fa arrow-up-wide-short >}} Sort** to reorder the list using different criteria in ascending or descending order.[^4]
+   - Click **{{< fa arrow-up-wide-short >}} Sort** to reorder the list using different criteria in ascending or descending order.[^5]
 
    <!-- ::: {.column-margin}
    **Note that searching and sorting of fields stack.**
@@ -89,7 +89,7 @@ d. Click **Apply Changes to Template** to complete the swap.
 
 ::: {.callout-important title="Template deletion is permanent and cannot be undone."}
 
-- Deleting a template deletes all versions of that template.[^5]
+- Deleting a template deletes all versions of that template.[^6]
 - Templates can only be deleted if they are not in use by any documents.
 :::
 
@@ -101,14 +101,14 @@ Delete templates no longer required by your organization:
 
 3. Select one of the tabs for the document type with the templates you want to view:
 
-   - **Documentation**[^6]
-   - **Validation Report**[^7]
-   - **Ongoing Monitoring**[^8]
-   - **Custom**[^9]
+   - **Documentation**[^7]
+   - **Validation Report**[^8]
+   - **Ongoing Monitoring**[^9]
+   - **Custom**[^10]
 
 4. Select the template you would like to delete by clicking on it.
 
-   Review the details of the template to confirm the template is no longer required.[^10]
+   Review the details of the template to confirm the template is no longer required.[^11]
 
 5. Click **Delete Template** to remove that template.
 
@@ -123,7 +123,9 @@ Delete templates no longer required by your organization:
 
 [^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^4]:
+[^4]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
+
+[^5]:
 
    - **[title]{.smallcaps}** — Sort by title alphabetically.
    - **[type]{.smallcaps}** — Sort by document type alphabetically.
@@ -134,17 +136,17 @@ Delete templates no longer required by your organization:
 
       For example, if you first search by keyword for `ValidMind` without clearing that search, any additional sorting applied will only apply to the results returned by that initial search.
 
-[^5]: [Customize document templates](customize-document-templates.qmd#edit-template-outlines)
+[^6]: [Customize document templates](customize-document-templates.qmd#edit-template-outlines)
 
-[^6]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+[^7]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
-[^7]: [Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd)
+[^8]: [Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd)
 
-[^8]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+[^9]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
 
-[^9]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^10]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
-[^10]:
+[^11]:
 
    [View document templates](#view-document-templates)<br></br>
 
