--- a/site/guide/templates/manage-text-block-library.qmd
+++ b/site/guide/templates/manage-text-block-library.qmd
@@ -25,20 +25,22 @@ To transform an existing text block into a reusable block:
 
 2. Select a model or find your model by applying a filter or searching for it.[^2]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a document file.[^3]
+3.  In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.[^3]
 
-4. Select the relevant section containing the text block you want to make reusable.
+4. Click on the file you'd like to copy a text block from.[^4]
 
-4. Hover your mouse over the text block you want to add to your block library, and click **{{< fa plus >}} Add to Library** to enter the details for your block:
+5. Select the relevant section containing the text block you want to make reusable.
+
+6. Hover your mouse over the text block you want to add to your block library, and click **{{< fa plus >}} Add to Library** to enter the details for your block:
 
     - The **[name]{.smallcaps}** of your text block
     - (Optional) A **[description]{.smallcaps}** for your text block
     - The templated **[content]{.smallcaps}** for your text block
     - Whether the block **[sharing]{.smallcaps}** permissions are **Private** or **Shared**
 
-5. Click **Add Block** to save your text block.
+7. Click **Add Block** to save your text block.
 
-Once added, insert private or shared text blocks into your documents,[^4] or shared text blocks into document templates.[^5]
+Once added, insert private or shared text blocks into your documents,[^5] or shared text blocks into document templates.[^6]
 
 
 ## Duplicate text blocks
@@ -92,11 +94,13 @@ To remove an existing text block from your block library:
 
 [^2]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^3]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^3]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
 
-[^4]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd#add-content-blocks)
+[^4]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
-[^5]: [Customize document templates](/guide/templates/customize-document-templates.qmd#add-text-blocks-to-templates)
+[^5]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd#add-content-blocks)
+
+[^6]: [Customize document templates](/guide/templates/customize-document-templates.qmd#add-text-blocks-to-templates)
 
 
 
