--- a/site/guide/configuration/manage-platform-notifications.qmd
+++ b/site/guide/configuration/manage-platform-notifications.qmd
@@ -111,7 +111,7 @@ Enable or disable email notifications for specific events across your organizati
 
 2. Select the **Configuration** tab.
 
-3. Under Email Notifications, toggle the options for each event on or off.
+3. Under Email Notifications, toggle the options for each event on or off according to your requirements.
 
 4. Click **Save Changes** to apply your adjustments.
 
