--- a/site/guide/configuration/manage-your-profile.qmd
+++ b/site/guide/configuration/manage-your-profile.qmd
@@ -7,6 +7,18 @@ aliases:
 
 Personalize your user experience and ensure you have access to the necessary tools and information. View your profile details, manage your onboarding preferences, enable dark mode, access your API keys, and more.
 
+You can find the following on your profile page:
+
+- Profile details
+- Roles attached to your account
+- Groups assigned to your account
+- Onboarding and user interface preferences
+- Terms of service agreements statuses
+- Localization preferences
+- Access keys
+- Password reset
+- Custom base URL override
+
 ::: {.attn}
 
 ## Prerequisites
@@ -17,21 +29,24 @@ Personalize your user experience and ensure you have access to the necessary too
 
 ## Access your profile
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**. 
+Access your profile via two methods:
 
-2. Under Your Account, select **Profile**. 
+::: {.panel-tabset}
 
-   You can find the following on your profile page:
+#### Via the left sidebar
 
-   - Profile details
-   - Roles attached to your account
-   - Groups assigned to your account
-   - Onboarding and user interface preferences
-   - Terms of service agreements statuses
-   - Localization preferences
-   - Access keys
-   - Password reset
-   - Custom base URL override
+1. In the left sidebar, locate your name near the bottom.
+
+2. Click **{{< fa ellipsis-vertical >}}** and select **{{< fa user >}} See my profile**.
+
+
+#### Via your settings
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Your Account, select **Profile**.
+
+:::
 
 ### Onboarding
 The {{< var vm.platform >}} provides an interactive onboarding journey right in the interface. You can toggle the onboarding wizard on or off at any time, as well as restart the onboarding tasks after you've completed them:
