--- a/site/guide/configuration/managing-your-organization.qmd
+++ b/site/guide/configuration/managing-your-organization.qmd
@@ -27,21 +27,32 @@ Access to the {{< var validmind.platform >}} is associated with an organization,
 
 ## Switch between organizations
 
-You will see the option to switch between organizations only if you belong to more than one organization:
+You will see the option to switch between organizations only if you belong to more than one organization via two methods:
 
-1. In the left sidebar, click **{{< fa gear >}} Settings**. 
+::: {.panel-tabset}
+
+#### Via the left sidebar
+
+1. In the left sidebar, locate your name near the bottom.
+
+2. Click on the name of your currently active organization.[^1]
+
+3. Select the organization you'd like to switch to.[^2]
+
+#### Via your settings
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
 2. Under Workspace, select **Organization**.
 
-3. Under **Organization**, select the organization you'd like to switch to.
+3. Under **Organization**, select the organization you'd like to switch to.[^3]
 
-    - Once selected, this will become your active organization. 
-    - Your active organization is displayed under your name and roles in the left sidebar.
+:::
 
 ## Change names of organizations
 
 ::: {.callout title="To change your organization's name, you must have sufficient organization permissions."}
-By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has these permissions.[^1]
+By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has these permissions.[^4]
 :::
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
@@ -59,4 +70,13 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has these permiss
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^1]: Your active organization is displayed under your name and roles in the left sidebar.
+
+[^2]:  Once selected, this will become your active organization.
+
+[^3]:
+
+  - Once selected, this will become your active organization.
+  - Your active organization is displayed under your name and roles in the left sidebar.
+
+[^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
