Update filename reference

--- a/site/releases/all-releases.qmd
+++ b/site/releases/all-releases.qmd
@@ -64,7 +64,7 @@ aliases:
 :::{#feature-highlights}
 :::
 
-[View all feature highlights](/releases/highlights.qmd){.button}
+[View all feature highlights](/releases/feature-highlights.qmd){.button}
 
 ::: {.pt4}
 ::: {.callout-important collapse="true" appearance="minimal"}
