Customer admin only for email notification toggles

--- a/site/guide/configuration/manage-platform-notifications.qmd
+++ b/site/guide/configuration/manage-platform-notifications.qmd
@@ -102,7 +102,7 @@ Model Stage Updates
 ## Customize email notifications
 
 ::: {.callout}
-To customize which platform notifications are sent to users in your organization, you must be a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions.[^5]
+To customize which platform notifications are sent to users in your organization, you must be a [{{< fa hand >}} Customer Admin]{.bubble}.[^5]
 :::
 
 Enable or disable email notifications for specific events across your organization:
