docs: Customize platform email notifications (#1069)
* Edit: Manage platform notifications

* Save point

* Customer admin only for email notification toggles

--- a/site/guide/configuration/manage-platform-notifications.qmd
+++ b/site/guide/configuration/manage-platform-notifications.qmd
@@ -14,7 +14,6 @@ Changes are automatically saved to your account and do not affect other users.
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-<!-- - [x] To customize platform notifications, you must be a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions.[^1] -->
 
 :::
 
@@ -100,14 +99,24 @@ Model Invites
 Model Stage Updates
 : Model stage transitions on your models.[^4]
 
-<!-- CUSTOMIZATION DOESN'T EXIST YET -->
+## Customize email notifications
 
-<!-- ## Customize platform notifications -->
+::: {.callout}
+To customize which platform notifications are sent to users in your organization, you must be a [{{< fa hand >}} Customer Admin]{.bubble}.[^5]
+:::
+
+Enable or disable email notifications for specific events across your organization:
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Select the **Configuration** tab.
+
+3. Under Email Notifications, toggle the options for each event on or off according to your requirements.
+
+4. Click **Save Changes** to apply your adjustments.
 
 
 <!-- FOOTNOTES -->
-
-<!-- [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd) -->
 
 [^1]: [Available update filters](#available-update-filters)
 
@@ -116,3 +125,5 @@ Model Stage Updates
 [^3]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)
 
 [^4]: [Working with workflows](/guide/workflows/working-with-workflows.qmd)
+
+[^5]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
