Edit: Manage users

--- a/site/guide/configuration/manage-users.qmd
+++ b/site/guide/configuration/manage-users.qmd
@@ -16,7 +16,19 @@ Invite new users and review your current users from within the user directory. U
 
 :::
 
+## View and search for users
+
+View a list of users in your organization that have access to the {{< var validmind.platform >}}: 
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under User Permissions, select **User Directory**.
+
+    Search the list of Organization Users by typing a keyword into the **{{< fa magnifying-glass >}} Search by name, email, title, or role...** box.
+
 ## Manage user invitations
+
+Invite users in your organization to the {{< var validmind.platform >}}:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
@@ -35,6 +47,8 @@ Invite new users and review your current users from within the user directory. U
 :::
 
 ## Manage user roles
+
+Adjust the roles users from your organization have within the {{< var validmind.platform >}}:
 
 {{< include _manage-user-roles.qmd >}}
 
