Move callout for lazy readers, minor edit

--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -7,24 +7,27 @@ aliases:
 
 Access a complete list of filterable artifacts logged across all your models in the {{< var validmind.platform >}}, or look at only artifacts linked to a specific model.
 
+::: {.callout}
+Within the {{< var validmind.platform >}}, artifacts are split into:[^1]
+
+- Validation issues
+- Other artifact types
+:::
+
 ::: {.attn}
 
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] There are models registered in the model inventory.[^1]
-- [x] There are artifacts logged on any model.[^2]
-- [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^3]
+- [x] There are models registered in the model inventory.[^2]
+- [x] There are artifacts logged on any model.[^3]
+- [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^4]
 
 :::
 
 ## View artifacts
 
 You can view artifacts for all models at once, or only view artifacts linked to a specific model.
-
-::: {.callout}
-Within the {{< var validmind.platform >}}, artifacts are spilt into validation issues and other artifact types.[^4]
-:::
 
 ### View all artifacts
 
@@ -118,13 +121,13 @@ Filters can be removed by clicking on the {{< fa xmark >}} next to them where th
 
 <!-- FOOTNOTES -->
 
-[^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
+[^1]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
 
-[^2]: [Add and manage artifacts](add-manage-artifacts.qmd)
+[^2]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^3]: [Add and manage artifacts](add-manage-artifacts.qmd)
 
-[^4]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
+[^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
 [^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
