--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -118,6 +118,7 @@ To narrow down artifacts, you can apply some filters:
 
 Filters can be removed by clicking on the {{< fa xmark >}} next to them where the results are displayed.
 
+{{< include ../shared/_build_filter_queries.qmd >}}
 
 <!-- FOOTNOTES -->
 
