Manage model inventory fields: Rename custom field keys

--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -29,6 +29,8 @@ a. Click on the custom inventory field you would like to edit.
 
 a. Make your desired changes to your inventory field, then click **Save**.
 
+    Field keys for custom inventory field can be renamed under the **[actions]{.smallcaps}** column.^[[Rename custom field keys](/guide/model-inventory/manage-model-inventory-fields.qmd#rename-custom-field-keys)]
+
 #### Edit core fields
 
 Core fields are fields created by default by {{< var vm.product >}}.[^core-fields] To modify a core field:
