Manage artifact fields: Rename artifact field keys

--- a/site/guide/model-validation/_add-edit-artifact-fields.qmd
+++ b/site/guide/model-validation/_add-edit-artifact-fields.qmd
@@ -25,6 +25,8 @@ a. Click on the artifact field you would like to edit.
 
 a. Make your desired changes to your artifact field, then click **Save**.
 
+    Field keys for artifact fields can be renamed under the **[actions]{.smallcaps}** column.^[[Rename artifact field keys](/guide/model-validation/manage-artifact-fields.qmd#rename-artifact-field-keys)]
+
 :::
 
 <!-- ADDITIONAL FOOTNOTES -->
