--- a/site/guide/model-validation/manage-artifact-fields.qmd
+++ b/site/guide/model-validation/manage-artifact-fields.qmd
@@ -75,6 +75,12 @@ For example, if you first search by keyword for `Regression` under **Title** wit
 
 {{< include /guide/model-validation/_add-edit-artifact-fields.qmd >}}
 
+### Rename artifact field keys
+
+To rename the field keys for artifact fields:
+
+{{< include /guide/model-inventory/_rename-field-keys.qmd >}}
+
 #### Artifact field types
 
 {{< include /guide/model-inventory/_field-types.qmd >}}
