--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -78,21 +78,9 @@ For example, if you first search by keyword for `date` under **Title** without c
 
 ### Rename custom field keys
 
-To rename the field key for custom inventory fields:
+To rename the field keys for custom inventory fields:
 
-1. Hover over the **[actions]{.smallcaps}** column on the far-right for the field whose key you want to rename.
-
-2. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select **{{< fa pen-to-square >}} Rename Key**.
-
-3. Enter in the [new key]{.smallcaps} and click **Check Availability**.
-
-4. If the key is not already in use, you'll be presented with a list of dependencies to review.
-
-    Verify that these dependencies are correct and as expected.
-
-5. Click **Rename Key** to apply your changes to the key.
-
-    Confirm that the dependencies updated are corrected and as expected.
+{{< include /guide/model-inventory/_rename-field-keys.qmd >}}
 
 #### Inventory field types
 
