Move shared file to match our de facto convention, fix typo, add margin links

--- a/site/guide/model-inventory/_build_filter_queries.qmd
+++ b/site/guide/model-inventory/_build_filter_queries.qmd
@@ -2,9 +2,9 @@
 
 On the **Select Your Filters** dialog, you can build complex filter queries with AND/OR logic and nested conditions. The filter system supports both core fields and custom fields, including attachments.
 
-#### Add filter rules
+#### Add simple filter rules
 
-1. Click **+ Rule** to add a filter condition.
+1. Click **{{< fa plus >}} Rule** to add a filter condition.
 
 2. Select a field from the dropdown. Fields are organized into groups:
    - **Core Fields**: Standard database fields (Name, Status, Business Unit, Tier, etc.)
