--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -101,7 +101,7 @@ To narrow down artifacts, you can apply some filters:
 
 ### Filter all other artifacts
 
-1. In the left sidebar, click  v to view lists of other artifact types across all models.
+1. In the left sidebar, click **{{< fa triangle-exclamation >}} Validation Issues** to view lists of other artifact types across all models.
 
 2. Select an artifact type[^9] to view from the tabs:
 
@@ -118,7 +118,7 @@ To narrow down artifacts, you can apply some filters:
 
 Filters can be removed by clicking on the {{< fa xmark >}} next to them where the results are displayed.
 
-{{< include ../shared/_build_filter_queries.qmd >}}
+{{< include /guide/model-inventory/_build_filter_queries.qmd >}}
 
 <!-- FOOTNOTES -->
 
@@ -136,19 +136,8 @@ Filters can be removed by clicking on the {{< fa xmark >}} next to them where th
 
 [^7]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
 
-[^8]:
-
-   - [**[status]{.smallcaps}**](/guide/model-validation/manage-artifact-types.qmd#manage-artifact-type-statuses)
-   - [**[model inventory]{.smallcaps}**](/guide/model-inventory/working-with-model-inventory.qmd)
-   - [**[risk area]{.smallcaps}**](/guide/model-validation/manage-validation-guidelines.qmd#set-up-validation-guidelines)
-   - [**[business units]{.smallcaps}**](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
-   - **[severity]{.smallcaps}**
-   - **[assignee]{.smallcaps}**
+[^8]: [How do I create effective filter queries?](#how-do-i-create-effective-filter-queries)
 
 [^9]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
 
-[^10]:
-
-   - [**[status]{.smallcaps}**](/guide/model-validation/manage-artifact-types.qmd#manage-artifact-type-statuses)
-   - [**[model inventory]{.smallcaps}**](/guide/model-inventory/working-with-model-inventory.qmd)
-   - [**[business units]{.smallcaps}**](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
+[^10]: [How do I create effective filter queries?](#how-do-i-create-effective-filter-queries)
