--- a/site/guide/model-inventory/working-with-model-inventory.qmd
+++ b/site/guide/model-inventory/working-with-model-inventory.qmd
@@ -38,10 +38,10 @@ Changes are automatically saved and will affect only your account.
 
 2. Use the top buttons to narrow down models and organize the model inventory to your preference:
    - **{{< fa magnifying-glass >}} Search** — Search for models using keywords in the model name.
-   - **{{< fa filter >}} Filter** — Filter models using different criteria.
-   - **{{< fa arrow-up-wide-short >}} Sort** — Reorder the list using different criteria in ascending or descending order.[^2]
+   - **{{< fa filter >}} Filter** — Filter models using different criteria.[^2]
+   - **{{< fa arrow-up-wide-short >}} Sort** — Reorder the list using different criteria in ascending or descending order.[^3]
 
-{{< include ../shared/_build_filter_queries.qmd >}}
+{{< include _build_filter_queries.qmd >}}
 
 ::: {.callout title="Note that searching, filtering, and sorting of fields stack."}
 For example, if you first search by keyword for `ValidMind` without clearing that search, any additional filtering and sorting applied will only apply to the results returned by the previous criteria.
@@ -62,7 +62,9 @@ For example, if you first search by keyword for `ValidMind` without clearing tha
 
 [^1]: [Register models in the inventory](register-models-in-inventory.qmd)
 
-[^2]:
+[^2]: [How do I create effective filter queries?](#how-do-i-create-effective-filter-queries)
+
+[^3]:
 
 - **[name]{.smallcaps}**
 - [**[business unit]{.smallcaps}**](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
