Break filter content out into its own topic

--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -116,10 +116,6 @@ To narrow down artifacts, you can apply some filters:
 
 :::
 
-Filters can be removed by clicking on the {{< fa xmark >}} next to them where the results are displayed.
-
-{{< include /guide/model-inventory/_build_filter_queries.qmd >}}
-
 <!-- FOOTNOTES -->
 
 [^1]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
@@ -136,8 +132,8 @@ Filters can be removed by clicking on the {{< fa xmark >}} next to them where th
 
 [^7]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
 
-[^8]: [How do I create effective filter queries?](#how-do-i-create-effective-filter-queries)
+[^8]: [Select your filters](/guide/model-inventory/select-your-filters.qmd)
 
 [^9]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
 
-[^10]: [How do I create effective filter queries?](#how-do-i-create-effective-filter-queries)
+[^10]: [Select your filters](/guide/model-inventory/select-your-filters.qmd)
