--- a/site/guide/model-inventory/working-with-model-inventory.qmd
+++ b/site/guide/model-inventory/working-with-model-inventory.qmd
@@ -41,8 +41,6 @@ Changes are automatically saved and will affect only your account.
    - **{{< fa filter >}} Filter** — Filter models using different criteria.[^2]
    - **{{< fa arrow-up-wide-short >}} Sort** — Reorder the list using different criteria in ascending or descending order.[^3]
 
-{{< include _build_filter_queries.qmd >}}
-
 ::: {.callout title="Note that searching, filtering, and sorting of fields stack."}
 For example, if you first search by keyword for `ValidMind` without clearing that search, any additional filtering and sorting applied will only apply to the results returned by the previous criteria.
 :::
@@ -62,7 +60,7 @@ For example, if you first search by keyword for `ValidMind` without clearing tha
 
 [^1]: [Register models in the inventory](register-models-in-inventory.qmd)
 
-[^2]: [How do I create effective filter queries?](#how-do-i-create-effective-filter-queries)
+[^2]: [Select your filters](select-your-filters.qmd)
 
 [^3]:
 
