Experiment with buttons

--- a/site/guide/model-inventory/working-with-model-inventory.qmd
+++ b/site/guide/model-inventory/working-with-model-inventory.qmd
@@ -60,7 +60,7 @@ For example, if you first search by keyword for `ValidMind` without clearing tha
 
 [^1]: [Register models in the inventory](register-models-in-inventory.qmd)
 
-[^2]: [Select your filters](select-your-filters.qmd)
+[^2]: [Select your filters](select-your-filters.qmd){.button}
 
 [^3]:
 
