--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -132,8 +132,8 @@ To narrow down artifacts, you can apply some filters:
 
 [^7]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
 
-[^8]: [Select your filters](/guide/model-inventory/select-your-filters.qmd)
+[^8]: [Select your filters](/guide/model-inventory/select-your-filters.qmd){.button}
 
 [^9]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)
 
-[^10]: [Select your filters](/guide/model-inventory/select-your-filters.qmd)
+[^10]: [Select your filters](/guide/model-inventory/select-your-filters.qmd){.button}
